tesina.output
Terminals unused in grammar

   THEN


Grammar

    0 $accept: prog $end

    1 prog: %empty
    2     | prog stmt EOL
    3     | prog stmt ';' EOL
    4     | prog condExp EOL
    5     | prog EOL
    6     | prog error EOL

    7 condExp: IF stmt ':' seqOp
    8        | IF stmt ':' seqOp ELSE seqOp
    9        | WHILE stmt ':' seqOp

   10 seqOp: stmt
   11      | stmt ';' seqOp

   12 stmt: exp
   13     | stmt CMP stmt
   14     | USRVAR '=' stmt
   15     | PAZIENTE '(' exp ',' exp ',' exp ',' exp ',' exp ')'
   16     | USRVAR '.' CF
   17     | USRVAR '.' ESITOTAMP
   18     | USRVAR '.' DATATAMP
   19     | USRVAR '.' REGIONE
   20     | USRVAR '.' ISRIC
   21     | REGISTRO '(' ')'
   22     | USRVAR '.' ADD '(' stmt ')'
   23     | USRVAR '.' GET '(' exp ')'
   24     | USRVAR '.' POSIN '(' exp ')'

   25 exp: NUMBER
   26    | exp '+' exp
   27    | exp '-' exp
   28    | exp '*' exp
   29    | exp '/' exp
   30    | '|' exp
   31    | '(' exp ')'
   32    | '-' exp
   33    | STRING
   34    | DATE
   35    | USRVAR
   36    | USRVAR '.' NPAZ
   37    | USRVAR '.' NPOS
   38    | USRVAR '.' NRIC


Terminals, with rules where they appear

$end (0) 0
'(' (40) 15 21 22 23 24 31
')' (41) 15 21 22 23 24 31
'*' (42) 28
'+' (43) 26
',' (44) 15
'-' (45) 27 32
'.' (46) 16 17 18 19 20 22 23 24 36 37 38
'/' (47) 29
':' (58) 7 8 9
';' (59) 3 11
'=' (61) 14
'|' (124) 30
error (256) 6
NUMBER (258) 25
STRING (259) 33
DATE (260) 34
IF (261) 7 8
THEN (262)
ELSE (263) 8
WHILE (264) 9
PAZIENTE (265) 15
CF (266) 16
ESITOTAMP (267) 17
DATATAMP (268) 18
REGIONE (269) 19
ISRIC (270) 20
REGISTRO (271) 21
ADD (272) 22
GET (273) 23
NPAZ (274) 36
NPOS (275) 37
NRIC (276) 38
POSIN (277) 24
USRVAR (278) 14 16 17 18 19 20 22 23 24 35 36 37 38
EOL (279) 2 3 4 5 6
CMP (280) 13
UMINUS (281)


Nonterminals, with rules where they appear

$accept (39)
    on left: 0
prog (40)
    on left: 1 2 3 4 5 6, on right: 0 2 3 4 5 6
condExp (41)
    on left: 7 8 9, on right: 4
seqOp (42)
    on left: 10 11, on right: 7 8 9 11
stmt (43)
    on left: 12 13 14 15 16 17 18 19 20 21 22 23 24, on right: 2 3
    7 8 9 10 11 13 14 22
exp (44)
    on left: 25 26 27 28 29 30 31 32 33 34 35 36 37 38, on right: 12
    15 23 24 26 27 28 29 30 31 32


State 0

    0 $accept: . prog $end

    $default  reduce using rule 1 (prog)

    prog  go to state 1


State 1

    0 $accept: prog . $end
    2 prog: prog . stmt EOL
    3     | prog . stmt ';' EOL
    4     | prog . condExp EOL
    5     | prog . EOL
    6     | prog . error EOL

    $end      shift, and go to state 2
    error     shift, and go to state 3
    NUMBER    shift, and go to state 4
    STRING    shift, and go to state 5
    DATE      shift, and go to state 6
    IF        shift, and go to state 7
    WHILE     shift, and go to state 8
    PAZIENTE  shift, and go to state 9
    REGISTRO  shift, and go to state 10
    USRVAR    shift, and go to state 11
    EOL       shift, and go to state 12
    '-'       shift, and go to state 13
    '|'       shift, and go to state 14
    '('       shift, and go to state 15

    condExp  go to state 16
    stmt     go to state 17
    exp      go to state 18


State 2

    0 $accept: prog $end .

    $default  accept


State 3

    6 prog: prog error . EOL

    EOL  shift, and go to state 19


State 4

   25 exp: NUMBER .

    $default  reduce using rule 25 (exp)


State 5

   33 exp: STRING .

    $default  reduce using rule 33 (exp)


State 6

   34 exp: DATE .

    $default  reduce using rule 34 (exp)


State 7

    7 condExp: IF . stmt ':' seqOp
    8        | IF . stmt ':' seqOp ELSE seqOp

    NUMBER    shift, and go to state 4
    STRING    shift, and go to state 5
    DATE      shift, and go to state 6
    PAZIENTE  shift, and go to state 9
    REGISTRO  shift, and go to state 10
    USRVAR    shift, and go to state 11
    '-'       shift, and go to state 13
    '|'       shift, and go to state 14
    '('       shift, and go to state 15

    stmt  go to state 20
    exp   go to state 18


State 8

    9 condExp: WHILE . stmt ':' seqOp

    NUMBER    shift, and go to state 4
    STRING    shift, and go to state 5
    DATE      shift, and go to state 6
    PAZIENTE  shift, and go to state 9
    REGISTRO  shift, and go to state 10
    USRVAR    shift, and go to state 11
    '-'       shift, and go to state 13
    '|'       shift, and go to state 14
    '('       shift, and go to state 15

    stmt  go to state 21
    exp   go to state 18


State 9

   15 stmt: PAZIENTE . '(' exp ',' exp ',' exp ',' exp ',' exp ')'

    '('  shift, and go to state 22


State 10

   21 stmt: REGISTRO . '(' ')'

    '('  shift, and go to state 23


State 11

   14 stmt: USRVAR . '=' stmt
   16     | USRVAR . '.' CF
   17     | USRVAR . '.' ESITOTAMP
   18     | USRVAR . '.' DATATAMP
   19     | USRVAR . '.' REGIONE
   20     | USRVAR . '.' ISRIC
   22     | USRVAR . '.' ADD '(' stmt ')'
   23     | USRVAR . '.' GET '(' exp ')'
   24     | USRVAR . '.' POSIN '(' exp ')'
   35 exp: USRVAR .
   36    | USRVAR . '.' NPAZ
   37    | USRVAR . '.' NPOS
   38    | USRVAR . '.' NRIC

    '='  shift, and go to state 24
    '.'  shift, and go to state 25

    $default  reduce using rule 35 (exp)


State 12

    5 prog: prog EOL .

    $default  reduce using rule 5 (prog)


State 13

   32 exp: '-' . exp

    NUMBER  shift, and go to state 4
    STRING  shift, and go to state 5
    DATE    shift, and go to state 6
    USRVAR  shift, and go to state 26
    '-'     shift, and go to state 13
    '|'     shift, and go to state 14
    '('     shift, and go to state 15

    exp  go to state 27


State 14

   30 exp: '|' . exp

    NUMBER  shift, and go to state 4
    STRING  shift, and go to state 5
    DATE    shift, and go to state 6
    USRVAR  shift, and go to state 26
    '-'     shift, and go to state 13
    '|'     shift, and go to state 14
    '('     shift, and go to state 15

    exp  go to state 28


State 15

   31 exp: '(' . exp ')'

    NUMBER  shift, and go to state 4
    STRING  shift, and go to state 5
    DATE    shift, and go to state 6
    USRVAR  shift, and go to state 26
    '-'     shift, and go to state 13
    '|'     shift, and go to state 14
    '('     shift, and go to state 15

    exp  go to state 29


State 16

    4 prog: prog condExp . EOL

    EOL  shift, and go to state 30


State 17

    2 prog: prog stmt . EOL
    3     | prog stmt . ';' EOL
   13 stmt: stmt . CMP stmt

    EOL  shift, and go to state 31
    CMP  shift, and go to state 32
    ';'  shift, and go to state 33


State 18

   12 stmt: exp .
   26 exp: exp . '+' exp
   27    | exp . '-' exp
   28    | exp . '*' exp
   29    | exp . '/' exp

    '+'  shift, and go to state 34
    '-'  shift, and go to state 35
    '*'  shift, and go to state 36
    '/'  shift, and go to state 37

    $default  reduce using rule 12 (stmt)


State 19

    6 prog: prog error EOL .

    $default  reduce using rule 6 (prog)


State 20

    7 condExp: IF stmt . ':' seqOp
    8        | IF stmt . ':' seqOp ELSE seqOp
   13 stmt: stmt . CMP stmt

    CMP  shift, and go to state 32
    ':'  shift, and go to state 38


State 21

    9 condExp: WHILE stmt . ':' seqOp
   13 stmt: stmt . CMP stmt

    CMP  shift, and go to state 32
    ':'  shift, and go to state 39


State 22

   15 stmt: PAZIENTE '(' . exp ',' exp ',' exp ',' exp ',' exp ')'

    NUMBER  shift, and go to state 4
    STRING  shift, and go to state 5
    DATE    shift, and go to state 6
    USRVAR  shift, and go to state 26
    '-'     shift, and go to state 13
    '|'     shift, and go to state 14
    '('     shift, and go to state 15

    exp  go to state 40


State 23

   21 stmt: REGISTRO '(' . ')'

    ')'  shift, and go to state 41


State 24

   14 stmt: USRVAR '=' . stmt

    NUMBER    shift, and go to state 4
    STRING    shift, and go to state 5
    DATE      shift, and go to state 6
    PAZIENTE  shift, and go to state 9
    REGISTRO  shift, and go to state 10
    USRVAR    shift, and go to state 11
    '-'       shift, and go to state 13
    '|'       shift, and go to state 14
    '('       shift, and go to state 15

    stmt  go to state 42
    exp   go to state 18


State 25

   16 stmt: USRVAR '.' . CF
   17     | USRVAR '.' . ESITOTAMP
   18     | USRVAR '.' . DATATAMP
   19     | USRVAR '.' . REGIONE
   20     | USRVAR '.' . ISRIC
   22     | USRVAR '.' . ADD '(' stmt ')'
   23     | USRVAR '.' . GET '(' exp ')'
   24     | USRVAR '.' . POSIN '(' exp ')'
   36 exp: USRVAR '.' . NPAZ
   37    | USRVAR '.' . NPOS
   38    | USRVAR '.' . NRIC

    CF         shift, and go to state 43
    ESITOTAMP  shift, and go to state 44
    DATATAMP   shift, and go to state 45
    REGIONE    shift, and go to state 46
    ISRIC      shift, and go to state 47
    ADD        shift, and go to state 48
    GET        shift, and go to state 49
    NPAZ       shift, and go to state 50
    NPOS       shift, and go to state 51
    NRIC       shift, and go to state 52
    POSIN      shift, and go to state 53


State 26

   35 exp: USRVAR .
   36    | USRVAR . '.' NPAZ
   37    | USRVAR . '.' NPOS
   38    | USRVAR . '.' NRIC

    '.'  shift, and go to state 54

    $default  reduce using rule 35 (exp)


State 27

   26 exp: exp . '+' exp
   27    | exp . '-' exp
   28    | exp . '*' exp
   29    | exp . '/' exp
   32    | '-' exp .

    $default  reduce using rule 32 (exp)


State 28

   26 exp: exp . '+' exp
   27    | exp . '-' exp
   28    | exp . '*' exp
   29    | exp . '/' exp
   30    | '|' exp .

    $default  reduce using rule 30 (exp)


State 29

   26 exp: exp . '+' exp
   27    | exp . '-' exp
   28    | exp . '*' exp
   29    | exp . '/' exp
   31    | '(' exp . ')'

    '+'  shift, and go to state 34
    '-'  shift, and go to state 35
    '*'  shift, and go to state 36
    '/'  shift, and go to state 37
    ')'  shift, and go to state 55


State 30

    4 prog: prog condExp EOL .

    $default  reduce using rule 4 (prog)


State 31

    2 prog: prog stmt EOL .

    $default  reduce using rule 2 (prog)


State 32

   13 stmt: stmt CMP . stmt

    NUMBER    shift, and go to state 4
    STRING    shift, and go to state 5
    DATE      shift, and go to state 6
    PAZIENTE  shift, and go to state 9
    REGISTRO  shift, and go to state 10
    USRVAR    shift, and go to state 11
    '-'       shift, and go to state 13
    '|'       shift, and go to state 14
    '('       shift, and go to state 15

    stmt  go to state 56
    exp   go to state 18


State 33

    3 prog: prog stmt ';' . EOL

    EOL  shift, and go to state 57


State 34

   26 exp: exp '+' . exp

    NUMBER  shift, and go to state 4
    STRING  shift, and go to state 5
    DATE    shift, and go to state 6
    USRVAR  shift, and go to state 26
    '-'     shift, and go to state 13
    '|'     shift, and go to state 14
    '('     shift, and go to state 15

    exp  go to state 58


State 35

   27 exp: exp '-' . exp

    NUMBER  shift, and go to state 4
    STRING  shift, and go to state 5
    DATE    shift, and go to state 6
    USRVAR  shift, and go to state 26
    '-'     shift, and go to state 13
    '|'     shift, and go to state 14
    '('     shift, and go to state 15

    exp  go to state 59


State 36

   28 exp: exp '*' . exp

    NUMBER  shift, and go to state 4
    STRING  shift, and go to state 5
    DATE    shift, and go to state 6
    USRVAR  shift, and go to state 26
    '-'     shift, and go to state 13
    '|'     shift, and go to state 14
    '('     shift, and go to state 15

    exp  go to state 60


State 37

   29 exp: exp '/' . exp

    NUMBER  shift, and go to state 4
    STRING  shift, and go to state 5
    DATE    shift, and go to state 6
    USRVAR  shift, and go to state 26
    '-'     shift, and go to state 13
    '|'     shift, and go to state 14
    '('     shift, and go to state 15

    exp  go to state 61


State 38

    7 condExp: IF stmt ':' . seqOp
    8        | IF stmt ':' . seqOp ELSE seqOp

    NUMBER    shift, and go to state 4
    STRING    shift, and go to state 5
    DATE      shift, and go to state 6
    PAZIENTE  shift, and go to state 9
    REGISTRO  shift, and go to state 10
    USRVAR    shift, and go to state 11
    '-'       shift, and go to state 13
    '|'       shift, and go to state 14
    '('       shift, and go to state 15

    seqOp  go to state 62
    stmt   go to state 63
    exp    go to state 18


State 39

    9 condExp: WHILE stmt ':' . seqOp

    NUMBER    shift, and go to state 4
    STRING    shift, and go to state 5
    DATE      shift, and go to state 6
    PAZIENTE  shift, and go to state 9
    REGISTRO  shift, and go to state 10
    USRVAR    shift, and go to state 11
    '-'       shift, and go to state 13
    '|'       shift, and go to state 14
    '('       shift, and go to state 15

    seqOp  go to state 64
    stmt   go to state 63
    exp    go to state 18


State 40

   15 stmt: PAZIENTE '(' exp . ',' exp ',' exp ',' exp ',' exp ')'
   26 exp: exp . '+' exp
   27    | exp . '-' exp
   28    | exp . '*' exp
   29    | exp . '/' exp

    '+'  shift, and go to state 34
    '-'  shift, and go to state 35
    '*'  shift, and go to state 36
    '/'  shift, and go to state 37
    ','  shift, and go to state 65


State 41

   21 stmt: REGISTRO '(' ')' .

    $default  reduce using rule 21 (stmt)


State 42

   13 stmt: stmt . CMP stmt
   14     | USRVAR '=' stmt .

    CMP  shift, and go to state 32

    $default  reduce using rule 14 (stmt)


State 43

   16 stmt: USRVAR '.' CF .

    $default  reduce using rule 16 (stmt)


State 44

   17 stmt: USRVAR '.' ESITOTAMP .

    $default  reduce using rule 17 (stmt)


State 45

   18 stmt: USRVAR '.' DATATAMP .

    $default  reduce using rule 18 (stmt)


State 46

   19 stmt: USRVAR '.' REGIONE .

    $default  reduce using rule 19 (stmt)


State 47

   20 stmt: USRVAR '.' ISRIC .

    $default  reduce using rule 20 (stmt)


State 48

   22 stmt: USRVAR '.' ADD . '(' stmt ')'

    '('  shift, and go to state 66


State 49

   23 stmt: USRVAR '.' GET . '(' exp ')'

    '('  shift, and go to state 67


State 50

   36 exp: USRVAR '.' NPAZ .

    $default  reduce using rule 36 (exp)


State 51

   37 exp: USRVAR '.' NPOS .

    $default  reduce using rule 37 (exp)


State 52

   38 exp: USRVAR '.' NRIC .

    $default  reduce using rule 38 (exp)


State 53

   24 stmt: USRVAR '.' POSIN . '(' exp ')'

    '('  shift, and go to state 68


State 54

   36 exp: USRVAR '.' . NPAZ
   37    | USRVAR '.' . NPOS
   38    | USRVAR '.' . NRIC

    NPAZ  shift, and go to state 50
    NPOS  shift, and go to state 51
    NRIC  shift, and go to state 52


State 55

   31 exp: '(' exp ')' .

    $default  reduce using rule 31 (exp)


State 56

   13 stmt: stmt . CMP stmt
   13     | stmt CMP stmt .

    CMP  error (nonassociative)

    $default  reduce using rule 13 (stmt)


State 57

    3 prog: prog stmt ';' EOL .

    $default  reduce using rule 3 (prog)


State 58

   26 exp: exp . '+' exp
   26    | exp '+' exp .
   27    | exp . '-' exp
   28    | exp . '*' exp
   29    | exp . '/' exp

    '*'  shift, and go to state 36
    '/'  shift, and go to state 37

    $default  reduce using rule 26 (exp)


State 59

   26 exp: exp . '+' exp
   27    | exp . '-' exp
   27    | exp '-' exp .
   28    | exp . '*' exp
   29    | exp . '/' exp

    '*'  shift, and go to state 36
    '/'  shift, and go to state 37

    $default  reduce using rule 27 (exp)


State 60

   26 exp: exp . '+' exp
   27    | exp . '-' exp
   28    | exp . '*' exp
   28    | exp '*' exp .
   29    | exp . '/' exp

    $default  reduce using rule 28 (exp)


State 61

   26 exp: exp . '+' exp
   27    | exp . '-' exp
   28    | exp . '*' exp
   29    | exp . '/' exp
   29    | exp '/' exp .

    $default  reduce using rule 29 (exp)


State 62

    7 condExp: IF stmt ':' seqOp .
    8        | IF stmt ':' seqOp . ELSE seqOp

    ELSE  shift, and go to state 69

    $default  reduce using rule 7 (condExp)


State 63

   10 seqOp: stmt .
   11      | stmt . ';' seqOp
   13 stmt: stmt . CMP stmt

    CMP  shift, and go to state 32
    ';'  shift, and go to state 70

    $default  reduce using rule 10 (seqOp)


State 64

    9 condExp: WHILE stmt ':' seqOp .

    $default  reduce using rule 9 (condExp)


State 65

   15 stmt: PAZIENTE '(' exp ',' . exp ',' exp ',' exp ',' exp ')'

    NUMBER  shift, and go to state 4
    STRING  shift, and go to state 5
    DATE    shift, and go to state 6
    USRVAR  shift, and go to state 26
    '-'     shift, and go to state 13
    '|'     shift, and go to state 14
    '('     shift, and go to state 15

    exp  go to state 71


State 66

   22 stmt: USRVAR '.' ADD '(' . stmt ')'

    NUMBER    shift, and go to state 4
    STRING    shift, and go to state 5
    DATE      shift, and go to state 6
    PAZIENTE  shift, and go to state 9
    REGISTRO  shift, and go to state 10
    USRVAR    shift, and go to state 11
    '-'       shift, and go to state 13
    '|'       shift, and go to state 14
    '('       shift, and go to state 15

    stmt  go to state 72
    exp   go to state 18


State 67

   23 stmt: USRVAR '.' GET '(' . exp ')'

    NUMBER  shift, and go to state 4
    STRING  shift, and go to state 5
    DATE    shift, and go to state 6
    USRVAR  shift, and go to state 26
    '-'     shift, and go to state 13
    '|'     shift, and go to state 14
    '('     shift, and go to state 15

    exp  go to state 73


State 68

   24 stmt: USRVAR '.' POSIN '(' . exp ')'

    NUMBER  shift, and go to state 4
    STRING  shift, and go to state 5
    DATE    shift, and go to state 6
    USRVAR  shift, and go to state 26
    '-'     shift, and go to state 13
    '|'     shift, and go to state 14
    '('     shift, and go to state 15

    exp  go to state 74


State 69

    8 condExp: IF stmt ':' seqOp ELSE . seqOp

    NUMBER    shift, and go to state 4
    STRING    shift, and go to state 5
    DATE      shift, and go to state 6
    PAZIENTE  shift, and go to state 9
    REGISTRO  shift, and go to state 10
    USRVAR    shift, and go to state 11
    '-'       shift, and go to state 13
    '|'       shift, and go to state 14
    '('       shift, and go to state 15

    seqOp  go to state 75
    stmt   go to state 63
    exp    go to state 18


State 70

   11 seqOp: stmt ';' . seqOp

    NUMBER    shift, and go to state 4
    STRING    shift, and go to state 5
    DATE      shift, and go to state 6
    PAZIENTE  shift, and go to state 9
    REGISTRO  shift, and go to state 10
    USRVAR    shift, and go to state 11
    '-'       shift, and go to state 13
    '|'       shift, and go to state 14
    '('       shift, and go to state 15

    seqOp  go to state 76
    stmt   go to state 63
    exp    go to state 18


State 71

   15 stmt: PAZIENTE '(' exp ',' exp . ',' exp ',' exp ',' exp ')'
   26 exp: exp . '+' exp
   27    | exp . '-' exp
   28    | exp . '*' exp
   29    | exp . '/' exp

    '+'  shift, and go to state 34
    '-'  shift, and go to state 35
    '*'  shift, and go to state 36
    '/'  shift, and go to state 37
    ','  shift, and go to state 77


State 72

   13 stmt: stmt . CMP stmt
   22     | USRVAR '.' ADD '(' stmt . ')'

    CMP  shift, and go to state 32
    ')'  shift, and go to state 78


State 73

   23 stmt: USRVAR '.' GET '(' exp . ')'
   26 exp: exp . '+' exp
   27    | exp . '-' exp
   28    | exp . '*' exp
   29    | exp . '/' exp

    '+'  shift, and go to state 34
    '-'  shift, and go to state 35
    '*'  shift, and go to state 36
    '/'  shift, and go to state 37
    ')'  shift, and go to state 79


State 74

   24 stmt: USRVAR '.' POSIN '(' exp . ')'
   26 exp: exp . '+' exp
   27    | exp . '-' exp
   28    | exp . '*' exp
   29    | exp . '/' exp

    '+'  shift, and go to state 34
    '-'  shift, and go to state 35
    '*'  shift, and go to state 36
    '/'  shift, and go to state 37
    ')'  shift, and go to state 80


State 75

    8 condExp: IF stmt ':' seqOp ELSE seqOp .

    $default  reduce using rule 8 (condExp)


State 76

   11 seqOp: stmt ';' seqOp .

    $default  reduce using rule 11 (seqOp)


State 77

   15 stmt: PAZIENTE '(' exp ',' exp ',' . exp ',' exp ',' exp ')'

    NUMBER  shift, and go to state 4
    STRING  shift, and go to state 5
    DATE    shift, and go to state 6
    USRVAR  shift, and go to state 26
    '-'     shift, and go to state 13
    '|'     shift, and go to state 14
    '('     shift, and go to state 15

    exp  go to state 81


State 78

   22 stmt: USRVAR '.' ADD '(' stmt ')' .

    $default  reduce using rule 22 (stmt)


State 79

   23 stmt: USRVAR '.' GET '(' exp ')' .

    $default  reduce using rule 23 (stmt)


State 80

   24 stmt: USRVAR '.' POSIN '(' exp ')' .

    $default  reduce using rule 24 (stmt)


State 81

   15 stmt: PAZIENTE '(' exp ',' exp ',' exp . ',' exp ',' exp ')'
   26 exp: exp . '+' exp
   27    | exp . '-' exp
   28    | exp . '*' exp
   29    | exp . '/' exp

    '+'  shift, and go to state 34
    '-'  shift, and go to state 35
    '*'  shift, and go to state 36
    '/'  shift, and go to state 37
    ','  shift, and go to state 82


State 82

   15 stmt: PAZIENTE '(' exp ',' exp ',' exp ',' . exp ',' exp ')'

    NUMBER  shift, and go to state 4
    STRING  shift, and go to state 5
    DATE    shift, and go to state 6
    USRVAR  shift, and go to state 26
    '-'     shift, and go to state 13
    '|'     shift, and go to state 14
    '('     shift, and go to state 15

    exp  go to state 83


State 83

   15 stmt: PAZIENTE '(' exp ',' exp ',' exp ',' exp . ',' exp ')'
   26 exp: exp . '+' exp
   27    | exp . '-' exp
   28    | exp . '*' exp
   29    | exp . '/' exp

    '+'  shift, and go to state 34
    '-'  shift, and go to state 35
    '*'  shift, and go to state 36
    '/'  shift, and go to state 37
    ','  shift, and go to state 84


State 84

   15 stmt: PAZIENTE '(' exp ',' exp ',' exp ',' exp ',' . exp ')'

    NUMBER  shift, and go to state 4
    STRING  shift, and go to state 5
    DATE    shift, and go to state 6
    USRVAR  shift, and go to state 26
    '-'     shift, and go to state 13
    '|'     shift, and go to state 14
    '('     shift, and go to state 15

    exp  go to state 85


State 85

   15 stmt: PAZIENTE '(' exp ',' exp ',' exp ',' exp ',' exp . ')'
   26 exp: exp . '+' exp
   27    | exp . '-' exp
   28    | exp . '*' exp
   29    | exp . '/' exp

    '+'  shift, and go to state 34
    '-'  shift, and go to state 35
    '*'  shift, and go to state 36
    '/'  shift, and go to state 37
    ')'  shift, and go to state 86


State 86

   15 stmt: PAZIENTE '(' exp ',' exp ',' exp ',' exp ',' exp ')' .

    $default  reduce using rule 15 (stmt)
